...
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|start"
                    android:minHeight="80dp"
                    android:onClick="onCalibrateSoilClick"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/soilCalibrate"
                    android:textAlignment="viewStart"
                    android:textColor="?longButtonText"
                    android:theme="?longButtonStyle" />

                <Button
                    android:id="@+id/buttonCalibrateWater"
...
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|start"
                    android:minHeight="80dp"
                    android:onClick="onCalibrateWaterClick"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/waterCalibrate"
                    android:textAlignment="viewStart"
                    android:textColor="?longButtonText"
                    android:theme="?longButtonStyle" />

                <Button
                    android:id="@+id/buttonTitration"
...
